--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
           <p class="hero-desc">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut&nbsp;laoreet dolore.
           </p>
-          <button class="btn hero-btn">
-            FREE 30&nbsp;DAY TRIAL
-          </button>
-          <span class="hero-secure">
-            SSL secured connection
-          </span>
+          <div class="hero-btn-wrapper flex">
+            <button class="btn hero-btn">
+              FREE 30&nbsp;DAY TRIAL
+            </button>
+            <span class="hero-secure">
+              SSL secured connection
+            </span>
+          </div>
         </div>
       </div>
     </section>
